--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
 	
 	<main class = "playing-field">
 		<ul class = "list-of-squares">
-			<li> НАЖМИТЕ ДЛЯ СТАРТА </li>
+			<li> НАЖМИ ДЛЯ СТАРТА </li>
 		</ul>
 	</main>
 	
